[tool.poetry]
name = "here"
version = "0.1.0"
description = "A simpler way to find your files"
authors = ["Andrew Stewart <andrew.c.stewart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]


[tool.ruff] 
line-length = 120
ignore = ["E741"]
show-source = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"